Fixed text alignment to center in projects.css.

--- a/projects.css
+++ b/projects.css
@@ -42,6 +42,7 @@
     padding: 15px;
     color: #F2EFDE;
     justify-content: center;
+    text-align: center;
 
     background-color: #093409;
     border-top-left-radius: 10px;
